--- a/css/iphone.css
+++ b/css/iphone.css
@@ -1,3 +1,19 @@
+
 footer {
-  background-color: beige;
+  background-color: #343a40 ;
+  }
+
+.mobile{
+  padding: 4% 3%;
+}
+
+.title-txt{
+  position: absolute;
+  bottom: 30%;
+  left: 5%;
+}
+
+.title-txt h1{
+  font-size: 4rem;
+  color: white;
 }
