--- a/css/products.css
+++ b/css/products.css
@@ -11,11 +11,17 @@ li{
 }
 
 .right-side ul{
- margin-left: 5%;
+ margin-left: 2%;
 }
 
 .right-side button{
     font-weight: 700;
     font-size: 1.5rem;
-    padding: 1% 10%;
+    padding: 1% ;
 }
+
+
+footer {
+    background-color: #343a40 ;
+    }
+  
