--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
 
 footer {
+  background-color: #343a40 ;
+  }
 
-}
+  .cat-samsung:hover{
+    color: white !important;
+    background-color: blue !important;
+  }
+  .cat-iphone:hover{
+    color:white !important;
+    background-color: black;
+  }
